--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="description">
-    14yo , wannabe weebs and tech enthusiast, animator and passionate writer
+    14yo , wannabe weeb and tech enthusiast, animator and passionate writer
   </div>
     
   <div class="links">
